# kwic-concordancer

./: .gitignore  .railwayignore  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  Procfile  README.md  concordance-prd.md  concordance_api.py  main.py  netlify.toml  package.json  pyproject.toml  railway.toml  requirements.txt  start_server.py  test_concordance.py
backend/: main.py  requirements.txt
backend/samples/: Enron_email.txt  Enron_meeting.txt  comedy_monologue.txt  covidhoax_hashtag.csv
frontend/: netlify.toml  tailwind.css
static/: app.js  index.html
