[project]
name = "spacy-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "spacy>=3.8.7",
    "superclaude>=3.0.0.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
