[project]
name = "kwic-concordancer"
version = "1.0.0"
description = "A modern corpus linguistics tool for KWIC (Keywords-in-Context) analysis"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]
